.provarCaches/00D6C0000000xA6UAI/objects/IBP__Ifbyphone_Match_Field__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Houses the Salesforce fields to search against for DialogTech phone number matching.</description>
    <fields>
        <fullName>IBP__Field_Display_Name__c</fullName>
        <label>Field Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBP__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBP__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBP__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <label>DialogTech Match Fields</label>
</CustomObject>